update records examples and java 15 notes